fixing the spacing issue

--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -11,7 +11,7 @@
 
     @media (min-width:992px) {
         & .row {
-            margin-top: -15vh;
+            margin-top: -10%;
         }
     }
 }
